// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainWrapper /> Should render correctly 1`] = `
<div>
  <main
    class="main-wrapperstyles__StyledMainWrapper-sc-hveppy-0 iMOsNu"
    id="main"
  >
    <div>
      some text
    </div>
  </main>
</div>
`;

exports[`<MainWrapper /> Should render correctly with custom className 1`] = `
<div>
  <main
    class="main-wrapperstyles__StyledMainWrapper-sc-hveppy-0 iMOsNu test-custom-classname"
    id="main"
  >
    <div>
      some text
    </div>
  </main>
</div>
`;
